2006-12-23  Kazu Hirata  <kazu@codesourcery.com>

	* configure.tgt: Recognize fido.

2006-12-15  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c: Add a blank line bewteen function bodies.

2006-12-15  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (build_modrm_byte): Reformat to 72 columns.

2006-12-14  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.am (YFLAGS): Define.
	* Makefile.in: Regenerated.

2006-12-14  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (match_template): Simplify 3 and 4 operand
	match.

2006-12-13  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (build_modrm_byte): Set the Operand_PCrel
	bit only.

2006-12-13  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (match_template): Use a for loop to set
	operand_types array.

2006-12-13  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/3712
	* config/tc-i386.c (match_template): Use MAX_OPERANDS for the
	number of operands. Issue an error if MAX_OPERANDS != 4. Add
	the 4th operand check.

2006-12-13  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (arm_arch_option_table): Add v7-{a,r,m}.
	* doc/c-arm.texi: Fix spelling of ARMv7 profile variants.

2006-12-12  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.h (WordMem): Document it for 64 bit memory
	reference.

2006-12-12  Daniel Jacobowitz  <dan@codesourcery.com>

	* doc/Makefile.am (as_TEXINFOS): Set.
	(as.info as.dvi as.html): Delete rule.
	* doc/Makefile.in: Regenerated.

2006-12-11  Daniel Jacobowitz  <dan@codesourcery.com>

	* configure.in: Define GENINSRC_NEVER.
	* doc/Makefile.am (as.info): Remove srcdir prefix.
	(MAINTAINERCLEANFILES): Add info file.
	(DISTCLEANFILES): Pretend to add info file.
	* po/Make-in (.po.gmo): Put gmo files in objdir.
	* configure, Makefile.in, doc/Makefile.in: Regenerated.

2006-12-09  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.h (template): Use MAX_OPERANDS instead of 4
	for operand_types array.

2006-12-08  Christian Groessler  <chris@groessler.org>
